--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -2,16 +2,26 @@ body {
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     background-color: black;
     text-align: center;
+    color: white;
 }
 
 h1 {
     font-weight: normal;
     font-size: 50px;
-    color: white;
     text-align: center;
 }
 
 a {
     color: aquamarine;
     font-size: 16px;
+}
+
+h2 {
+    font-weight: 300;
+    font-size: 42px;
+}
+
+.description {
+    font-size: 21px;
+    color: gray;
 }
